--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Aqui iria el titulo de la Página</h1>
     <p>Esto es un parrafo</p>
-    <p>Esto esun segundo parrafo</p>
+    <p>Esto es un segundo parrafo</p>
+    <p>Esto es un tercer parrafo</p>
 </body>
 </html>
